feat(router): add `prompt` & `max_age` params to authorize endpoint / RFC references to existing PKCE parameter descriptions
